[package]
name = "rust_candles_retriever"
version = "0.1.0"
edition = "2024"

[dependencies]
binance = "0.21.0" # Vérifie la dernière version de binance-rs
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0.17"
anyhow = "1.0" # Pour une gestion d'erreurs plus simple
actix = "0.13"
actix-web = "4.5"
actix-files = "0.6"
actix-cors = "0.7"
actix-web-actors = "4.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
moka = { version = "0.12", features = ["future"] }
